--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,8 @@
 .header{
-    background-color: var(--background-tomato);
-    /* background-size: cover; */
+    padding-top: 0.8rem;
+    padding-bottom: 1.6rem;
     width: 100%;
+    background-image: linear-gradient(0, hsl(14,99%,59%),hsl(5,90%,56%));
 }
 
 .header a, i{
@@ -11,6 +12,7 @@
 .nav{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 2rem;
 }
 
 .nav .nav__list{
@@ -22,20 +24,88 @@
 }
 
 .line-space + .line-space{
-    border-left: 0.1rem solid hsl(7,94%,66%);
+    border-left: 0.2rem solid hsl(7,94%,66%);
 }
 
 .nav i{
     padding: 0 0.4rem;
+    font-size: 1.6rem;
 }
 
-.nav a:hover,
-.nav a:hover i {
+.nav .item--link:hover,
+.nav .item--link:hover i {
     color: hsl(8,91%,90%);
 }
 
+.nav .item--link:hover .qr-code-img{
+    
+}
+
 .nav .fb-icon-link, .instag-icon-link{
-    width: 1.6rem;
-    height: 1.6rem;
-    background: url('./img/icons8-facebook-30.png') cover;
+    padding: 0 1.2rem;
+}
+
+.nav .fb-icon-link{
+    background: url('./img/icons8-facebook-16.png') center/2rem 2rem no-repeat;
+}
+
+.nav .instag-icon-link{
+    background: url('./img/icons8-instagram-16.png') center/2rem 2rem no-repeat;
+}
+
+.header .main-logo{
+    width: 239px;
+    height: 88px;
+    display: inline-block;
+    /* padding: 15px; */
+    top: 0;
+    margin-right: 15px;
+    background: url(./img/logo_duno.jpg) 0.1px center/contain no-repeat;
+    padding-right: 0px;
+}
+
+.wrapper-logo-with-search{
+    display: flex;
+}
+
+.search-bar{
+    flex: 2;
+}
+
+.search-bar .search-bar__wrapper{
+    display: flex;
+    border-radius: 0.4rem;
+    overflow: hidden;
+}
+
+.search-bar .search-bar__input{
+    background-color: white;
+    border-color: white;
+    display: flex;
+    flex: 1;
+    position: relative;
+   
+}
+
+.search-bar .search-bar__input input{
+    flex: 1;
+    height: 4.2rem;
+    padding-left: 1.6rem;
+    font-size: 1.4rem;
+    border: 0;
+    
+    outline: none;
+}
+
+/* .search-bar .search-bar__input input:focus{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    border: 2px solid black;
+    width: 100%;
+    height: 70px;
+} */
+.search-bar .topkey__list{
+    display: flex;
 }
