--- a/assets/base.css
+++ b/assets/base.css
@@ -4,11 +4,13 @@
     --background-whitesmoke: hsl(0,0%,96%);
     --category-gray: hsl(0,0%,46%);
     --footer-snow-color: hsl(0,0%,98%);
+    --yellow-star-color: #ffb81f;
 }
 
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html{
@@ -17,6 +19,8 @@ html{
     line-height: 1.5;
     font-family: Helvetica, Arial, sans-serif;
     max-width: 192rem;
+    position: relative;
+    height: 500rem;
 }
 
 a, ul,li{
@@ -33,6 +37,194 @@ a, li, i{
 }
 
 .container{
-    max-width: 120rem;
+    width: 120rem;
+    max-width: 100%;
     margin: 0 auto;
+}
+
+.grid__row-lg{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -10px;
+    margin-right: -10px;
+}
+
+.grid__row-med{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -1px;
+    margin-right: -1px;
+}
+
+.grid__col-lg{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.grid__col-med{
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.grid__col-2{
+    width: 16.667%;
+}
+
+.grid__col-10{
+    width: 83.334%;
+}
+
+.grid__col-2-5{
+    width: 20%;
+}
+
+.grid__col-3{
+    width: 30%;
+}
+
+.grid__col-7{
+    width: 70%;
+} 
+
+.pt-12{
+    padding-top: 24px;
+}
+
+.pt-50{
+    padding-top: 50px;
+}
+
+.pt-120{
+    padding-top: 120px;
+}
+
+.pb-40{
+    padding-bottom: 40px;
+}
+
+.pb-60{
+  padding-bottom: 60px;
+}
+
+.mb-12{
+    margin-bottom: 12px;
+}
+
+.mt-34{
+    margin-top: 34px;
+}
+
+
+
+.item-overlay{
+    z-index: 1;
+}
+
+.item-overlay:hover{
+    z-index: 9;
+}
+
+@keyframes expandObject {
+    from{
+            opacity: 0;
+            transform: scale(0);
+    }
+    to{
+            opacity: 1;
+            transform: scale(1);
+    }
+}
+
+@keyframes recoverObject {
+    from{
+        opacity: 1;
+        }
+    to{
+        opacity: 0;
+        transform:scale(0);
+    }
+}
+
+@keyframes appearObject{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+.modal{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+
+.modal__overlay{
+    position: inherit;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal__inner{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn{
+    border: none;
+    font-weight: 700;
+    color: var(--background-tomato);
+    padding: 0.8rem 2.4rem;
+    cursor: pointer;
+    background-color: transparent;
+    border-radius: 2px;
+    line-height: 1;
+}
+
+.btn:hover{
+    background-color: var(--footer-snow-color);
+    opacity: 0.8;
+}
+
+.btn.btn--primary{
+    background-color: var(--background-tomato);
+    color: white;
+    border-radius: 2px;
+    padding: 0.8rem 2.4rem;
+    font-size: 1.32rem;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.btn--full-width{
+    width: 100%;
+}
+
+.btn.btn--primary:hover{
+    opacity: 0.8;
+}
+
+.btn.btn--footer{
+    font-size: 1.32rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    color: #000;
+}
+
+.yellow-star-icon{
+    color: var(--yellow-star-color);
+}
+
+.clear-fix{
+    content: "";
+    display: table;
+    clear: both;
 }
